--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
         <div class="left">Prabin's Portfolio</div>
         <div class="right">
           <ul>
-            <li><a href="new.html">HOME</a></li>
+            <li><a href="index.html">HOME</a></li>
             <li><a href="About.html">ABOUT</a></li>
             <li><a href="services.html">SERVICES</a></li>
             <li><a href="projects.html">PROJECTS</a></li>
